--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "firebase": "^7.15.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^6.0.8"
   },
   "scripts": {
